Functionality to delete book has been added

--- a/bookstore/frontend/addBook.html
+++ b/bookstore/frontend/addBook.html
@@ -16,7 +16,9 @@
 <body>
   <nav class="navbar navbar-expand-md fixed-top  bg-color-green">
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html">Book Store</a>
+      <a class="navbar-brand" href="home.html">
+        <img src="images/book_logo.png" alt="">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
