--- a/bookstore/frontend/updateBook.html
+++ b/bookstore/frontend/updateBook.html
@@ -16,7 +16,9 @@
 <body>
   <nav class="navbar navbar-expand-md fixed-top  bg-color-green">
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html">Book Store</a>
+      <a class="navbar-brand" href="home.html">
+        <img src="images/book_logo.png" alt="">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,51 +43,50 @@
       </div>
     </div>
   </nav>
-    <div class="container-fluid bg-color-white text-center" style="margin-top: 5rem;">
-        <h1 style="margin: 0 0 4rem 0;">Update Book</h1>
-        <table id="updateBookTable" class="table table-striped">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Book Name</th>
-              <th scope="col">Amazon URL</th>
-              <th scope="col">Image</th>
-              <th scope="col">Update Book</th>
-            </tr>
-          </thead>
-          <tbody id="showAllBooksInUpdateBook">
-          </tbody>
-        </table>
-        <div id="updateBookForm" class="row" style="margin: 0 0 5rem 0; display:none;">
-          <input id="updateBookFormId" type="text" style="display:none;">
-          <div class="row mb-3">
-              <label class="col-sm-2 col-form-label">Book Name</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="updateBookName">
-              </div>
-          </div>
-          <div class="row mb-3">
-          <label class="col-sm-2 col-form-label">Amazon's URL</label>
-          <div class="col-sm-10">
-              <input type="text" class="form-control" id="updateAmazonUrl">
-          </div>
-          </div>
-          <div class="row mb-3">
-              <label class="col-sm-2 col-form-label">Upload Image</label>
-              <div class="col-sm-10">
-                  <input class="form-control" type="file" id="bookImage"/>
-              </div>   
-          </div>
-          <div class="d-flex justify-content-center">
-              <button type="button" id="uploadBookById" class="btn btn-primary text-center col-sm-2">Update</button>
-          </div>
+  <div class="container-fluid bg-color-white text-center" style="margin-top: 5rem;">
+      <h1 style="margin: 0 0 4rem 0;">Update Book</h1>
+      <table id="updateBookTable" class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Book Name</th>
+            <th scope="col">Amazon URL</th>
+            <th scope="col">Image</th>
+            <th scope="col">Update Book</th>
+          </tr>
+        </thead>
+        <tbody id="showAllBooksInUpdateBook">
+        </tbody>
+      </table>
+      <div id="updateBookForm" class="row" style="margin: 0 0 5rem 0; display:none;">
+        <input id="updateBookFormId" type="text" style="display:none;">
+        <div class="row mb-3">
+            <label class="col-sm-2 col-form-label">Book Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="updateBookName">
+            </div>
         </div>
-    </div>
-
-    <footer class="footer mt-auto py-3 bg-color-green text-center">
-        <div class="container">
-          <span >@2021 Bookstore</span>
+        <div class="row mb-3">
+        <label class="col-sm-2 col-form-label">Amazon's URL</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="updateAmazonUrl">
         </div>
-    </footer>
+        </div>
+        <div class="row mb-3">
+            <label class="col-sm-2 col-form-label">Upload Image</label>
+            <div class="col-sm-10">
+                <input class="form-control" type="file" id="bookImage"/>
+            </div>   
+        </div>
+        <div class="d-flex justify-content-center">
+            <button type="button" id="uploadBookById" class="btn btn-primary text-center col-sm-2">Update</button>
+        </div>
+      </div>
+  </div>
+  <footer class="footer mt-auto py-3 bg-color-green text-center">
+      <div class="container">
+        <span >@2021 Bookstore</span>
+      </div>
+  </footer>
 </body>
 </html>
